--- a/modeling-03.qmd
+++ b/modeling-03.qmd
@@ -110,14 +110,34 @@ predictors = read_predictors(sst_db = sst_db,
 Now we make the predictions with the raster covariates.
 ```{r}
 pred = predict(model, predictors, type = 'cloglog')
+
+coast = rnaturalearth::ne_coastline(scale = 'large', returnclass = 'sf') |>
+  sf::st_crop(pred)
+
+plot_coast = function() {
+  plot(sf::st_geometry(coast), col = 'green', add = TRUE)
+}
+plot(pred, hook = plot_coast)
 ```
-Compute and plot!
+
+Well, no surprises in the appearance.  Next, we compute and plot the ROCs.
 
 ```{r}
 pauc = maxnetic::pAUC(pred, 
                       dplyr::filter(obs, grouping == 'testing'), 
                       time_column = 'month_id')
-plot(pauc)
+plot(pauc, title = "Testing data with rasters")
 ```
-Whoa!  It looks different, but has the same AUC. How's that possible?  Well, in each use of `maxnetic::pAUC()` we are providing the same presence values; it doesn't look like from a workflow standpoint (point data vs raster data), but we are predicting the same values with the same model.  These presence point values provide the same way points over which the area is computed regardless of which workflow we used. It is true the "universe" of predicted values changed as we switched from points to rasters, and that gives rise to the textual change in the curve (smooth vs bumpy).  But area captured under the curve remains the same.  Surprising!
+Whoa!  It looks different, but has the same AUC. How's that possible?  Well, in each use of `maxnetic::pAUC()` we are providing the same presence values; it doesn't look like from a workflow standpoint (point data vs raster data), but we are predicting the same values with the same model.  These presence point values provide the same way points over which the area is computed regardless of which workflow we used. It is true the "universe" of predicted values changed as we switched from points to rasters, and that gives rise to the textual change in the curve (in this case smooth vs bumpy).  But area captured under the curve remains the same.  Surprising!
 
+
+Let's flip the situation by computing AUC for the **training** data using the raster predictors.
+
+```{r}
+pauc = maxnetic::pAUC(pred, 
+                      dplyr::filter(obs, grouping == 'training'), 
+                      time_column = 'month_id')
+plot(pauc, title = 'Training data with rasters')
+```
+
+It's a slightly higher AUC, given that the model was trained on that data and that there are more points it isn't too surprising that AUC is different.  But it isn't wildly different which is informative about how the stable model is.
