resolved oisster issues

--- a/modeling-02.qmd
+++ b/modeling-02.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Modeling each month"
-cache: true
+cache: false
 ---
 
 Here we modify our first modeling workflow to produce a model for each month. In the [previous workflow](modeling-01.qmd) we produced one model covering observations covering all times; we then applied the model to the various months. 
